Grid and Flex layout example Assignment

--- a/CSS_Grid_Layout_Assignment.html
+++ b/CSS_Grid_Layout_Assignment.html
@@ -7,7 +7,7 @@
     <style>
         section{
             display: grid;
-            height: 100vh;
+            height: 500px;
             grid-template-columns: repeat(4,1fr);
             grid-template-rows: repeat(3,1fr);
         }
